--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ email: you@example.com # put your email address in here; optional
 description: > # this just means to ignore newlines until "baseurl:"
   Brume is simple. It's easy to use. It's a Jekyll theme.
 baseurl:  # the subpath of your site, e.g. /blog/; if unsure, leave this blank
-url: http://[username].github.io # replace [username] with your github username (no brackets)
-github_username: github_username # replace with your github username
+url: http://eng7006student.github.io # replace [username] with your github username (no brackets)
+github_username: eng7006student # replace with your github username
 
 ########################## DO NOT EDIT BELOW HERE UNLESS YOU'RE STOKED TO HACK
 # build settings
