--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,13 @@
 ########################### EDIT YOUR SETTINGS HERE
 # Site settings
-title: Brume # give your site a title
+title: A Test Student Blog # give your site a title
 email: you@example.com # put your email address in here; optional
 # edit your site description; keep it brief
 description: > # this just means to ignore newlines until "baseurl:"
-  Brume is simple. It's easy to use. It's a Jekyll theme.
-baseurl:  # the subpath of your site, e.g. /blog/; if unsure, leave this blank
+  Brume is simple.
+  It's easy to use.
+  It's a Jekyll theme.
+baseurl: / # the subpath of your site, e.g. /blog/; if unsure, leave this blank
 url: http://eng7006student.github.io # replace [username] with your github username (no brackets)
 github_username: eng7006student # replace with your github username
 
