--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: you@example.com # put your email address in here; optional
 # edit your site description; keep it brief
 description: 'Brume is simple. It's easy to use. It's a Jekyll theme.'
 url: http://eng7006student.github.io
-baseurl: / # the subpath of your site, e.g. /blog/; if unsure, leave this blank
+baseurl: # the subpath of your site, e.g. /blog/; if unsure, leave this blank
  # replace [username] with your github username (no brackets)
 github_username: eng7006student # replace with your github username
 
